# file-uploader

./: .env.example  .gitignore  LICENSE  Makefile  README.md  makefile.mk  makefile.utils.mk  pyproject.toml
.github/workflows/: cd.yml  ci-checks.yml  ci.yml  pr-branch-restriction.yml
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.rabbitmq.yml  docker-compose.test.yml  docker-compose.yml
docker/development/: docker-compose.dev.yml  docker-compose.testing.yml
docker/templates/: docker-compose.j2
scripts/: entrypoint.py  entrypoint.sh  generate_compose.py  run_tests.py
src/: main.py
src/core/: exceptions.py  session.py
src/core/celery/: client.py  enums.py  settings.py
src/core/config/: celery.py  log.py  postgres.py  storage.py
src/models/: base.py  image.py  product.py
src/processors/: __init__.py  db_upload_processor.py  s3_upload_processor.py
src/tasks/: __init__.py  schemas.py  task_db_upload.py  task_s3_upload.py
src/utils/: __init__.py  keys_generator.py  logger.py
tests/: conftest.py
tests/test_processors/: test_db_upload.py  test_s3_upload.py
tests/test_tasks/: smoke_test.py  test_task_db_upload.py  test_task_s3_upload.py
tests/test_utils/: test_keys_generator.py
