[tool.poetry]
name = "file-uploader"
version = "0.1.0"
description = "The file upload service uses a Celery worker to perform tasks to upload files to an AWS S3 bucket."
authors = ["usik-sviatoslav <usik.sviatoslav.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.5.0"
gevent = "^25.4.2"
pydantic = "^2.11.2"
boto3 = "^1.38.2"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
uuid6 = "^2024.7.10"
redis = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
flake8-functions = "^0.0.8"
flake8-variables-names = "^0.0.6"
flake8-class-attributes-order = "^0.3.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.1.0"
types-gevent = "^24.11.0.20250401"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true

[tool.black]
line-length = 120

[tool.flake8]
max-complexity = 8
max-line-length = 120
exclude = [".env", ".git", "poetry.lock", ".pytest_cache", "__pycache__", "venv"]
per-file-ignores = ["__init__.py:F401,F403"]
ignore = ["W503"]

[tool.mypy]
mypy_path = "src"
python_version = "3.11"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = false
show_column_numbers = true
show_error_context = true
strict_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["/tests"]
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = ["-x", "--ff", "--nf", "-W error", "--color=yes", "--cov-report=html", "--cov-report=term-missing"]
markers = ["unit", "smoke"]

[tool.coverage.run]
source = ["/src"]
omit = ["/src/core/*", "/tests/*"]
data_file = "/tests/htmlcov/.coverage"
branch = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.html]
directory = "/tests/htmlcov"
