[project]
name = "tvorcha-lavka-file-uploader"
version = "0.1.0"
description = "The microservice for uploading files to AWS S3 bucket and storing metadata in the database."
authors = [
    {name = "usik-sviatoslav",email = "usik.sviatoslav.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "boto3 (>=1.38.46,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "gevent (>=25.5.1,<26.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uuid6 (>=2025.0.0,<2026.0.0)"
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
jinja2-cli = "^0.8.2"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-bugbear = "^24.12.12"
flake8-pyproject = "^1.2.3"
flake8-functions = "^0.0.8"
flake8-variables-names = "^0.0.6"
flake8-class-attributes-order = "^0.3.0"


[tool.poetry.group.typecheck.dependencies]
mypy = "^1.16.0"
types-gevent = "^25.4.0.20250516"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"


# --- ISORT CONFIG: https://pycqa.github.io/isort/docs/configuration/profiles --  ---  ---  ---  ---  ---  ---  ---  ---


[tool.isort]
profile = "black"
force_grid_wrap = 0
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true


# --- BLACK CONFIG: https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html -  ---  ---  ---  ---


[tool.black]
line-length = 120


# --- FLAKE8 CONFIG: https://flake8.pycqa.org/en/latest/user/configuration.html   ---  ---  ---  ---  ---  ---  ---  ---


[tool.flake8]
exclude = [
    ".env",
    ".git",
    "venv",
    "poetry.lock",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
]
per-file-ignores = ["__init__.py:F401,F403"]
ignore = ["W503"]
max-complexity = 8
max-line-length = 120
max-returns-amount = 3


# --- MYPY CONFIG: https://mypy.readthedocs.io/en/stable/config_file.html -  ---  ---  ---  ---  ---  ---  ---  ---  ---


[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
plugins = ["pydantic.mypy"]
exclude = []

explicit_package_bases = true
ignore_errors = false
ignore_missing_imports = false
pretty = true
strict = true
show_absolute_path = true
show_column_numbers = true
show_error_context = true
show_traceback = true
warn_unreachable = true
warn_no_return = true


[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tasks.*"]
disable_error_code = ["misc"]


# --- PYTEST CONFIG: https://docs.pytest.org/en/latest/reference/customize.html   ---  ---  ---  ---  ---  ---  ---  ---


[tool.pytest.ini_options]
addopts = [
    "--exitfirst",
    "--color=yes",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "--failed-first",
    "--new-first",
    "--pythonwarnings=error",
]
testpaths = ["/tests"]
markers = ["unit", "smoke"]
python_files = ["tests.py", "test_*.py", "*_test.py"]


# --- COVERAGE CONFIG: https://coverage.readthedocs.io/en/latest/config.html ---  ---  ---  ---  ---  ---  ---  ---  ---


[tool.coverage.run]
source = ["/src"]
data_file = "/tests/htmlcov/.coverage"
omit = ["/src/core/*", "/tests/*"]
branch = true


[tool.coverage.report]
skip_empty = true


[tool.coverage.html]
directory = "/tests/htmlcov"


# --- SYSTEM --  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---  ---


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
